src/test/ui/impl-header-lifetime-elision/trait-elided.stderr
error: hidden lifetime parameters in types are deprecated
  --> $DIR/trait-elided.rs:5:6
   |
LL | impl MyTrait for u32 {}
   |      ^^^^^^^ expected lifetime parameter
   |
note: the lint level is defined here
  --> $DIR/trait-elided.rs:1:9
   |
LL | #![deny(elided_lifetimes_in_paths)]
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^
help: indicate the anonymous lifetime
   |
LL | impl MyTrait<'_> for u32 {}
   |             ++++

error: aborting due to previous error

